Prevent page content from bleeding through mobile nav submenu

--- a/apollo/assets/styles/sass/60-components/_navigation.scss
+++ b/apollo/assets/styles/sass/60-components/_navigation.scss
@@ -173,6 +173,7 @@ Mobile navigation styles
 		position: absolute;
 		left: 0;
 		top: 0;
+		z-index: 5;
 
 	}
 
